<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/taskFragment"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/home" />
        <item
            android:id="@+id/addTaskFragment"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/add_task" />

    </group>
    <item android:title="@string/support">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/aboutFragment"
                    android:icon="@android:drawable/ic_menu_help"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>

</menu>