<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding=".8dp"
    android:background="@color/blackLight"
    tools:context=".AboutFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textColor="@color/white"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:text="@string/about_the_app" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/technical_detail_title"
        android:textColor="@color/white"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:text="@string/technical_details" />

</LinearLayout>